parser.out
Created by PLY version 3.2 (http://www.dabeaz.com/ply)

Unused terminals:

    IDDOT

Grammar

Rule 0     S' -> expression
Rule 1     expression -> PETRINET net_list SEMI
Rule 2     net_list -> ID , net_list
Rule 3     net_list -> ID
Rule 4     net_list -> ARRAY_ID , net_list
Rule 5     net_list -> ARRAY_ID
Rule 6     expression -> PLACE place_list SEMI
Rule 7     place_list -> place_list_id
Rule 8     place_list -> place_list_ddot_id
Rule 9     place_list -> place_list_id_with_capacity
Rule 10    place_list -> place_list_ddot_id_with_capacity
Rule 11    place_list -> place_in_net
Rule 12    place_list_id -> ID , place_list
Rule 13    place_list_id -> ARRAY_ID , place_list
Rule 14    place_list_id -> ID
Rule 15    place_list_id -> ARRAY_ID
Rule 16    place_list_ddot_id -> ID DDOT ID , place_list
Rule 17    place_list_ddot_id -> ID DDOT ARRAY_ID , place_list
Rule 18    place_list_ddot_id -> ARRAY_ID DDOT ID , place_list
Rule 19    place_list_ddot_id -> ARRAY_ID DDOT ARRAY_ID , place_list
Rule 20    place_list_ddot_id -> ID DDOT ID
Rule 21    place_list_ddot_id -> ID DDOT ARRAY_ID
Rule 22    place_list_ddot_id -> ARRAY_ID DDOT ID
Rule 23    place_list_ddot_id -> ARRAY_ID DDOT ARRAY_ID
Rule 24    place_list_id_with_capacity -> ID LPAREN NUMBER RPAREN , place_list
Rule 25    place_list_id_with_capacity -> ARRAY_ID LPAREN NUMBER RPAREN , place_list
Rule 26    place_list_id_with_capacity -> ARRAY_ID LPAREN NUMBER RPAREN
Rule 27    place_list_id_with_capacity -> ID LPAREN NUMBER RPAREN
Rule 28    place_list_ddot_id_with_capacity -> ID DDOT ID LPAREN NUMBER RPAREN , place_list
Rule 29    place_list_ddot_id_with_capacity -> ARRAY_ID DDOT ID LPAREN NUMBER RPAREN , place_list
Rule 30    place_list_ddot_id_with_capacity -> ID DDOT ARRAY_ID LPAREN NUMBER RPAREN , place_list
Rule 31    place_list_ddot_id_with_capacity -> ARRAY_ID DDOT ARRAY_ID LPAREN NUMBER RPAREN , place_list
Rule 32    place_list_ddot_id_with_capacity -> ARRAY_ID DDOT ID LPAREN NUMBER RPAREN
Rule 33    place_list_ddot_id_with_capacity -> ID DDOT ARRAY_ID LPAREN NUMBER RPAREN
Rule 34    place_list_ddot_id_with_capacity -> ARRAY_ID DDOT ARRAY_ID LPAREN NUMBER RPAREN
Rule 35    place_list_ddot_id_with_capacity -> ID DDOT ID LPAREN NUMBER RPAREN
Rule 36    place_in_net -> ID LBRACE place_list_in_net RBRACE
Rule 37    place_in_net -> ID LBRACE place_list_in_net RBRACE , place_list
Rule 38    place_in_net -> ARRAY_ID LBRACE place_list_in_net RBRACE
Rule 39    place_in_net -> ARRAY_ID LBRACE place_list_in_net RBRACE , place_list
Rule 40    place_list_in_net -> ID , place_list_in_net
Rule 41    place_list_in_net -> ARRAY_ID , place_list_in_net
Rule 42    place_list_in_net -> ID LPAREN NUMBER RPAREN , place_list_in_net
Rule 43    place_list_in_net -> ARRAY_ID LPAREN NUMBER RPAREN , place_list_in_net
Rule 44    place_list_in_net -> ID
Rule 45    place_list_in_net -> ID LPAREN NUMBER RPAREN
Rule 46    place_list_in_net -> ARRAY_ID
Rule 47    place_list_in_net -> ARRAY_ID LPAREN NUMBER RPAREN
Rule 48    expression -> TRANSITION trans_list SEMI
Rule 49    trans_list -> trans_list_id
Rule 50    trans_list -> trans_list_ddot_id
Rule 51    trans_list -> trans_in_net
Rule 52    trans_list_id -> ID
Rule 53    trans_list_id -> ID , trans_list
Rule 54    trans_list_id -> ARRAY_ID
Rule 55    trans_list_id -> ARRAY_ID , trans_list
Rule 56    trans_list_ddot_id -> ID DDOT ID
Rule 57    trans_list_ddot_id -> ID DDOT ID , trans_list
Rule 58    trans_list_ddot_id -> ARRAY_ID DDOT ID
Rule 59    trans_list_ddot_id -> ARRAY_ID DDOT ID , trans_list
Rule 60    trans_list_ddot_id -> ID DDOT ARRAY_ID
Rule 61    trans_list_ddot_id -> ID DDOT ARRAY_ID , trans_list
Rule 62    trans_list_ddot_id -> ARRAY_ID DDOT ARRAY_ID
Rule 63    trans_list_ddot_id -> ARRAY_ID DDOT ARRAY_ID , trans_list
Rule 64    trans_in_net -> ARRAY_ID LBRACE trans_list_in_net RBRACE , trans_list
Rule 65    trans_in_net -> ID LBRACE trans_list_in_net RBRACE , trans_list
Rule 66    trans_in_net -> ID LBRACE trans_list_in_net RBRACE
Rule 67    trans_in_net -> ARRAY_ID LBRACE trans_list_in_net RBRACE
Rule 68    trans_list_in_net -> ID , trans_list_in_net
Rule 69    trans_list_in_net -> ID
Rule 70    trans_list_in_net -> ARRAY_ID , trans_list_in_net
Rule 71    trans_list_in_net -> ARRAY_ID
Rule 72    expression -> ID LBRACE in_net_link_list RBRACE SEMI
Rule 73    expression -> ARRAY_ID LBRACE in_net_link_list RBRACE SEMI
Rule 74    in_net_link_list -> ARRAY_ID
Rule 75    in_net_link_list -> ARRAY_ID LINK in_net_link_list
Rule 76    in_net_link_list -> ARRAY_ID LINK LPAREN NUMBER RPAREN in_net_link_list
Rule 77    in_net_link_list -> ARRAY_ID OR in_net_link_list
Rule 78    in_net_link_list -> ID LINK in_net_link_list
Rule 79    in_net_link_list -> ID LINK LPAREN NUMBER RPAREN in_net_link_list
Rule 80    in_net_link_list -> ID OR in_net_link_list
Rule 81    in_net_link_list -> ID
Rule 82    expression -> ID DDOT ID LPAREN element_list_id RPAREN SEMI
Rule 83    expression -> ID DDOT ID LPAREN element_list_string RPAREN SEMI
Rule 84    expression -> ARRAY_ID DDOT ID LPAREN element_list_id RPAREN SEMI
Rule 85    expression -> ARRAY_ID DDOT ID LPAREN element_list_string RPAREN SEMI
Rule 86    element_list_id -> ID
Rule 87    element_list_id -> ID , element_list_id
Rule 88    element_list_id -> ID , element_list_string
Rule 89    element_list_id -> <empty>
Rule 90    element_list_string -> STRING
Rule 91    element_list_string -> STRING , element_list_id
Rule 92    element_list_string -> STRING , element_list_string
Rule 93    expression -> ID = LPAREN union_net_list RPAREN ON LSQBRACE union_element_list RSQBRACE SEMI
Rule 94    expression -> ARRAY_ID = LPAREN union_net_list RPAREN ON LSQBRACE union_element_list RSQBRACE SEMI
Rule 95    union_element_list -> element_eq_list , union_element_list
Rule 96    union_element_list -> element_eq_list
Rule 97    element_eq_list -> ID = element_eq_list
Rule 98    element_eq_list -> ID AS ID_IN_ID
Rule 99    element_eq_list -> <empty>
Rule 100   union_net_list -> ID OR union_net_list
Rule 101   union_net_list -> ARRAY_ID OR union_net_list
Rule 102   union_net_list -> ID
Rule 103   union_net_list -> ARRAY_ID
Rule 104   expression -> # ID = ID
Rule 105   expression -> COMMENT
Rule 106   expression -> SEMI
Rule 107   expression -> SHOW_NETS SEMI
Rule 108   expression -> SHOW_PLACES SEMI
Rule 109   expression -> SHOW_TRANSITIONS SEMI
Rule 110   expression -> SHOW_LINKS SEMI
Rule 111   expression -> ID LBRACE element_value_list RBRACE SEMI
Rule 112   element_value_list -> ID = NUMBER , element_value_list
Rule 113   element_value_list -> ID = NUMBER

Terminals, with rules where they appear

#                    : 104
,                    : 2 4 12 13 16 17 18 19 24 25 28 29 30 31 37 39 40 41 42 43 53 55 57 59 61 63 64 65 68 70 87 88 91 92 95 112
=                    : 93 94 97 104 112 113
ARRAY_ID             : 4 5 13 15 17 18 19 19 21 22 23 23 25 26 29 30 31 31 32 33 34 34 38 39 41 43 46 47 54 55 58 59 60 61 62 62 63 63 64 67 70 71 73 74 75 76 77 84 85 94 101 103
AS                   : 98
COMMENT              : 105
DDOT                 : 16 17 18 19 20 21 22 23 28 29 30 31 32 33 34 35 56 57 58 59 60 61 62 63 82 83 84 85
ID                   : 2 3 12 14 16 16 17 18 20 20 21 22 24 27 28 28 29 30 32 33 35 35 36 37 40 42 44 45 52 53 56 56 57 57 58 59 60 61 65 66 68 69 72 78 79 80 81 82 82 83 83 84 85 86 87 88 93 97 98 100 102 104 104 111 112 113
IDDOT                : 
ID_IN_ID             : 98
LBRACE               : 36 37 38 39 64 65 66 67 72 73 111
LINK                 : 75 76 78 79
LPAREN               : 24 25 26 27 28 29 30 31 32 33 34 35 42 43 45 47 76 79 82 83 84 85 93 94
LSQBRACE             : 93 94
NUMBER               : 24 25 26 27 28 29 30 31 32 33 34 35 42 43 45 47 76 79 112 113
ON                   : 93 94
OR                   : 77 80 100 101
PETRINET             : 1
PLACE                : 6
RBRACE               : 36 37 38 39 64 65 66 67 72 73 111
RPAREN               : 24 25 26 27 28 29 30 31 32 33 34 35 42 43 45 47 76 79 82 83 84 85 93 94
RSQBRACE             : 93 94
SEMI                 : 1 6 48 72 73 82 83 84 85 93 94 106 107 108 109 110 111
SHOW_LINKS           : 110
SHOW_NETS            : 107
SHOW_PLACES          : 108
SHOW_TRANSITIONS     : 109
STRING               : 90 91 92
TRANSITION           : 48
error                : 

Nonterminals, with rules where they appear

element_eq_list      : 95 96 97
element_list_id      : 82 84 87 91
element_list_string  : 83 85 88 92
element_value_list   : 111 112
expression           : 0
in_net_link_list     : 72 73 75 76 77 78 79 80
net_list             : 1 2 4
place_in_net         : 11
place_list           : 6 12 13 16 17 18 19 24 25 28 29 30 31 37 39
place_list_ddot_id   : 8
place_list_ddot_id_with_capacity : 10
place_list_id        : 7
place_list_id_with_capacity : 9
place_list_in_net    : 36 37 38 39 40 41 42 43
trans_in_net         : 51
trans_list           : 48 53 55 57 59 61 63 64 65
trans_list_ddot_id   : 50
trans_list_id        : 49
trans_list_in_net    : 64 65 66 67 68 70
union_element_list   : 93 94 95
union_net_list       : 93 94 100 101

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . PETRINET net_list SEMI
    (6) expression -> . PLACE place_list SEMI
    (48) expression -> . TRANSITION trans_list SEMI
    (72) expression -> . ID LBRACE in_net_link_list RBRACE SEMI
    (73) expression -> . ARRAY_ID LBRACE in_net_link_list RBRACE SEMI
    (82) expression -> . ID DDOT ID LPAREN element_list_id RPAREN SEMI
    (83) expression -> . ID DDOT ID LPAREN element_list_string RPAREN SEMI
    (84) expression -> . ARRAY_ID DDOT ID LPAREN element_list_id RPAREN SEMI
    (85) expression -> . ARRAY_ID DDOT ID LPAREN element_list_string RPAREN SEMI
    (93) expression -> . ID = LPAREN union_net_list RPAREN ON LSQBRACE union_element_list RSQBRACE SEMI
    (94) expression -> . ARRAY_ID = LPAREN union_net_list RPAREN ON LSQBRACE union_element_list RSQBRACE SEMI
    (104) expression -> . # ID = ID
    (105) expression -> . COMMENT
    (106) expression -> . SEMI
    (107) expression -> . SHOW_NETS SEMI
    (108) expression -> . SHOW_PLACES SEMI
    (109) expression -> . SHOW_TRANSITIONS SEMI
    (110) expression -> . SHOW_LINKS SEMI
    (111) expression -> . ID LBRACE element_value_list RBRACE SEMI

    PETRINET        shift and go to state 4
    PLACE           shift and go to state 8
    TRANSITION      shift and go to state 10
    ID              shift and go to state 9
    ARRAY_ID        shift and go to state 1
    #               shift and go to state 5
    COMMENT         shift and go to state 3
    SEMI            shift and go to state 6
    SHOW_NETS       shift and go to state 12
    SHOW_PLACES     shift and go to state 2
    SHOW_TRANSITIONS shift and go to state 11
    SHOW_LINKS      shift and go to state 7

    expression                     shift and go to state 13

state 1

    (73) expression -> ARRAY_ID . LBRACE in_net_link_list RBRACE SEMI
    (84) expression -> ARRAY_ID . DDOT ID LPAREN element_list_id RPAREN SEMI
    (85) expression -> ARRAY_ID . DDOT ID LPAREN element_list_string RPAREN SEMI
    (94) expression -> ARRAY_ID . = LPAREN union_net_list RPAREN ON LSQBRACE union_element_list RSQBRACE SEMI

    LBRACE          shift and go to state 14
    DDOT            shift and go to state 15
    =               shift and go to state 16


state 2

    (108) expression -> SHOW_PLACES . SEMI

    SEMI            shift and go to state 17


state 3

    (105) expression -> COMMENT .

    $end            reduce using rule 105 (expression -> COMMENT .)


state 4

    (1) expression -> PETRINET . net_list SEMI
    (2) net_list -> . ID , net_list
    (3) net_list -> . ID
    (4) net_list -> . ARRAY_ID , net_list
    (5) net_list -> . ARRAY_ID

    ID              shift and go to state 20
    ARRAY_ID        shift and go to state 18

    net_list                       shift and go to state 19

state 5

    (104) expression -> # . ID = ID

    ID              shift and go to state 21


state 6

    (106) expression -> SEMI .

    $end            reduce using rule 106 (expression -> SEMI .)


state 7

    (110) expression -> SHOW_LINKS . SEMI

    SEMI            shift and go to state 22


state 8

    (6) expression -> PLACE . place_list SEMI
    (7) place_list -> . place_list_id
    (8) place_list -> . place_list_ddot_id
    (9) place_list -> . place_list_id_with_capacity
    (10) place_list -> . place_list_ddot_id_with_capacity
    (11) place_list -> . place_in_net
    (12) place_list_id -> . ID , place_list
    (13) place_list_id -> . ARRAY_ID , place_list
    (14) place_list_id -> . ID
    (15) place_list_id -> . ARRAY_ID
    (16) place_list_ddot_id -> . ID DDOT ID , place_list
    (17) place_list_ddot_id -> . ID DDOT ARRAY_ID , place_list
    (18) place_list_ddot_id -> . ARRAY_ID DDOT ID , place_list
    (19) place_list_ddot_id -> . ARRAY_ID DDOT ARRAY_ID , place_list
    (20) place_list_ddot_id -> . ID DDOT ID
    (21) place_list_ddot_id -> . ID DDOT ARRAY_ID
    (22) place_list_ddot_id -> . ARRAY_ID DDOT ID
    (23) place_list_ddot_id -> . ARRAY_ID DDOT ARRAY_ID
    (24) place_list_id_with_capacity -> . ID LPAREN NUMBER RPAREN , place_list
    (25) place_list_id_with_capacity -> . ARRAY_ID LPAREN NUMBER RPAREN , place_list
    (26) place_list_id_with_capacity -> . ARRAY_ID LPAREN NUMBER RPAREN
    (27) place_list_id_with_capacity -> . ID LPAREN NUMBER RPAREN
    (28) place_list_ddot_id_with_capacity -> . ID DDOT ID LPAREN NUMBER RPAREN , place_list
    (29) place_list_ddot_id_with_capacity -> . ARRAY_ID DDOT ID LPAREN NUMBER RPAREN , place_list
    (30) place_list_ddot_id_with_capacity -> . ID DDOT ARRAY_ID LPAREN NUMBER RPAREN , place_list
    (31) place_list_ddot_id_with_capacity -> . ARRAY_ID DDOT ARRAY_ID LPAREN NUMBER RPAREN , place_list
    (32) place_list_ddot_id_with_capacity -> . ARRAY_ID DDOT ID LPAREN NUMBER RPAREN
    (33) place_list_ddot_id_with_capacity -> . ID DDOT ARRAY_ID LPAREN NUMBER RPAREN
    (34) place_list_ddot_id_with_capacity -> . ARRAY_ID DDOT ARRAY_ID LPAREN NUMBER RPAREN
    (35) place_list_ddot_id_with_capacity -> . ID DDOT ID LPAREN NUMBER RPAREN
    (36) place_in_net -> . ID LBRACE place_list_in_net RBRACE
    (37) place_in_net -> . ID LBRACE place_list_in_net RBRACE , place_list
    (38) place_in_net -> . ARRAY_ID LBRACE place_list_in_net RBRACE
    (39) place_in_net -> . ARRAY_ID LBRACE place_list_in_net RBRACE , place_list

    ID              shift and go to state 29
    ARRAY_ID        shift and go to state 23

    place_list_id                  shift and go to state 24
    place_in_net                   shift and go to state 25
    place_list_ddot_id_with_capacity shift and go to state 27
    place_list_id_with_capacity    shift and go to state 26
    place_list_ddot_id             shift and go to state 28
    place_list                     shift and go to state 30

state 9

    (72) expression -> ID . LBRACE in_net_link_list RBRACE SEMI
    (82) expression -> ID . DDOT ID LPAREN element_list_id RPAREN SEMI
    (83) expression -> ID . DDOT ID LPAREN element_list_string RPAREN SEMI
    (93) expression -> ID . = LPAREN union_net_list RPAREN ON LSQBRACE union_element_list RSQBRACE SEMI
    (111) expression -> ID . LBRACE element_value_list RBRACE SEMI

    LBRACE          shift and go to state 31
    DDOT            shift and go to state 32
    =               shift and go to state 33


state 10

    (48) expression -> TRANSITION . trans_list SEMI
    (49) trans_list -> . trans_list_id
    (50) trans_list -> . trans_list_ddot_id
    (51) trans_list -> . trans_in_net
    (52) trans_list_id -> . ID
    (53) trans_list_id -> . ID , trans_list
    (54) trans_list_id -> . ARRAY_ID
    (55) trans_list_id -> . ARRAY_ID , trans_list
    (56) trans_list_ddot_id -> . ID DDOT ID
    (57) trans_list_ddot_id -> . ID DDOT ID , trans_list
    (58) trans_list_ddot_id -> . ARRAY_ID DDOT ID
    (59) trans_list_ddot_id -> . ARRAY_ID DDOT ID , trans_list
    (60) trans_list_ddot_id -> . ID DDOT ARRAY_ID
    (61) trans_list_ddot_id -> . ID DDOT ARRAY_ID , trans_list
    (62) trans_list_ddot_id -> . ARRAY_ID DDOT ARRAY_ID
    (63) trans_list_ddot_id -> . ARRAY_ID DDOT ARRAY_ID , trans_list
    (64) trans_in_net -> . ARRAY_ID LBRACE trans_list_in_net RBRACE , trans_list
    (65) trans_in_net -> . ID LBRACE trans_list_in_net RBRACE , trans_list
    (66) trans_in_net -> . ID LBRACE trans_list_in_net RBRACE
    (67) trans_in_net -> . ARRAY_ID LBRACE trans_list_in_net RBRACE

    ID              shift and go to state 39
    ARRAY_ID        shift and go to state 35

    trans_in_net                   shift and go to state 34
    trans_list_ddot_id             shift and go to state 37
    trans_list_id                  shift and go to state 38
    trans_list                     shift and go to state 36

state 11

    (109) expression -> SHOW_TRANSITIONS . SEMI

    SEMI            shift and go to state 40


state 12

    (107) expression -> SHOW_NETS . SEMI

    SEMI            shift and go to state 41


state 13

    (0) S' -> expression .



state 14

    (73) expression -> ARRAY_ID LBRACE . in_net_link_list RBRACE SEMI
    (74) in_net_link_list -> . ARRAY_ID
    (75) in_net_link_list -> . ARRAY_ID LINK in_net_link_list
    (76) in_net_link_list -> . ARRAY_ID LINK LPAREN NUMBER RPAREN in_net_link_list
    (77) in_net_link_list -> . ARRAY_ID OR in_net_link_list
    (78) in_net_link_list -> . ID LINK in_net_link_list
    (79) in_net_link_list -> . ID LINK LPAREN NUMBER RPAREN in_net_link_list
    (80) in_net_link_list -> . ID OR in_net_link_list
    (81) in_net_link_list -> . ID

    ARRAY_ID        shift and go to state 42
    ID              shift and go to state 43

    in_net_link_list               shift and go to state 44

state 15

    (84) expression -> ARRAY_ID DDOT . ID LPAREN element_list_id RPAREN SEMI
    (85) expression -> ARRAY_ID DDOT . ID LPAREN element_list_string RPAREN SEMI

    ID              shift and go to state 45


state 16

    (94) expression -> ARRAY_ID = . LPAREN union_net_list RPAREN ON LSQBRACE union_element_list RSQBRACE SEMI

    LPAREN          shift and go to state 46


state 17

    (108) expression -> SHOW_PLACES SEMI .

    $end            reduce using rule 108 (expression -> SHOW_PLACES SEMI .)


state 18

    (4) net_list -> ARRAY_ID . , net_list
    (5) net_list -> ARRAY_ID .

    ,               shift and go to state 47
    SEMI            reduce using rule 5 (net_list -> ARRAY_ID .)


state 19

    (1) expression -> PETRINET net_list . SEMI

    SEMI            shift and go to state 48


state 20

    (2) net_list -> ID . , net_list
    (3) net_list -> ID .

    ,               shift and go to state 49
    SEMI            reduce using rule 3 (net_list -> ID .)


state 21

    (104) expression -> # ID . = ID

    =               shift and go to state 50


state 22

    (110) expression -> SHOW_LINKS SEMI .

    $end            reduce using rule 110 (expression -> SHOW_LINKS SEMI .)


state 23

    (13) place_list_id -> ARRAY_ID . , place_list
    (15) place_list_id -> ARRAY_ID .
    (18) place_list_ddot_id -> ARRAY_ID . DDOT ID , place_list
    (19) place_list_ddot_id -> ARRAY_ID . DDOT ARRAY_ID , place_list
    (22) place_list_ddot_id -> ARRAY_ID . DDOT ID
    (23) place_list_ddot_id -> ARRAY_ID . DDOT ARRAY_ID
    (25) place_list_id_with_capacity -> ARRAY_ID . LPAREN NUMBER RPAREN , place_list
    (26) place_list_id_with_capacity -> ARRAY_ID . LPAREN NUMBER RPAREN
    (29) place_list_ddot_id_with_capacity -> ARRAY_ID . DDOT ID LPAREN NUMBER RPAREN , place_list
    (31) place_list_ddot_id_with_capacity -> ARRAY_ID . DDOT ARRAY_ID LPAREN NUMBER RPAREN , place_list
    (32) place_list_ddot_id_with_capacity -> ARRAY_ID . DDOT ID LPAREN NUMBER RPAREN
    (34) place_list_ddot_id_with_capacity -> ARRAY_ID . DDOT ARRAY_ID LPAREN NUMBER RPAREN
    (38) place_in_net -> ARRAY_ID . LBRACE place_list_in_net RBRACE
    (39) place_in_net -> ARRAY_ID . LBRACE place_list_in_net RBRACE , place_list

    ,               shift and go to state 52
    SEMI            reduce using rule 15 (place_list_id -> ARRAY_ID .)
    DDOT            shift and go to state 53
    LPAREN          shift and go to state 54
    LBRACE          shift and go to state 51


state 24

    (7) place_list -> place_list_id .

    SEMI            reduce using rule 7 (place_list -> place_list_id .)


state 25

    (11) place_list -> place_in_net .

    SEMI            reduce using rule 11 (place_list -> place_in_net .)


state 26

    (9) place_list -> place_list_id_with_capacity .

    SEMI            reduce using rule 9 (place_list -> place_list_id_with_capacity .)


state 27

    (10) place_list -> place_list_ddot_id_with_capacity .

    SEMI            reduce using rule 10 (place_list -> place_list_ddot_id_with_capacity .)


state 28

    (8) place_list -> place_list_ddot_id .

    SEMI            reduce using rule 8 (place_list -> place_list_ddot_id .)


state 29

    (12) place_list_id -> ID . , place_list
    (14) place_list_id -> ID .
    (16) place_list_ddot_id -> ID . DDOT ID , place_list
    (17) place_list_ddot_id -> ID . DDOT ARRAY_ID , place_list
    (20) place_list_ddot_id -> ID . DDOT ID
    (21) place_list_ddot_id -> ID . DDOT ARRAY_ID
    (24) place_list_id_with_capacity -> ID . LPAREN NUMBER RPAREN , place_list
    (27) place_list_id_with_capacity -> ID . LPAREN NUMBER RPAREN
    (28) place_list_ddot_id_with_capacity -> ID . DDOT ID LPAREN NUMBER RPAREN , place_list
    (30) place_list_ddot_id_with_capacity -> ID . DDOT ARRAY_ID LPAREN NUMBER RPAREN , place_list
    (33) place_list_ddot_id_with_capacity -> ID . DDOT ARRAY_ID LPAREN NUMBER RPAREN
    (35) place_list_ddot_id_with_capacity -> ID . DDOT ID LPAREN NUMBER RPAREN
    (36) place_in_net -> ID . LBRACE place_list_in_net RBRACE
    (37) place_in_net -> ID . LBRACE place_list_in_net RBRACE , place_list

    ,               shift and go to state 56
    SEMI            reduce using rule 14 (place_list_id -> ID .)
    DDOT            shift and go to state 57
    LPAREN          shift and go to state 58
    LBRACE          shift and go to state 55


state 30

    (6) expression -> PLACE place_list . SEMI

    SEMI            shift and go to state 59


state 31

    (72) expression -> ID LBRACE . in_net_link_list RBRACE SEMI
    (111) expression -> ID LBRACE . element_value_list RBRACE SEMI
    (74) in_net_link_list -> . ARRAY_ID
    (75) in_net_link_list -> . ARRAY_ID LINK in_net_link_list
    (76) in_net_link_list -> . ARRAY_ID LINK LPAREN NUMBER RPAREN in_net_link_list
    (77) in_net_link_list -> . ARRAY_ID OR in_net_link_list
    (78) in_net_link_list -> . ID LINK in_net_link_list
    (79) in_net_link_list -> . ID LINK LPAREN NUMBER RPAREN in_net_link_list
    (80) in_net_link_list -> . ID OR in_net_link_list
    (81) in_net_link_list -> . ID
    (112) element_value_list -> . ID = NUMBER , element_value_list
    (113) element_value_list -> . ID = NUMBER

    ARRAY_ID        shift and go to state 42
    ID              shift and go to state 61

    element_value_list             shift and go to state 62
    in_net_link_list               shift and go to state 60

state 32

    (82) expression -> ID DDOT . ID LPAREN element_list_id RPAREN SEMI
    (83) expression -> ID DDOT . ID LPAREN element_list_string RPAREN SEMI

    ID              shift and go to state 63


state 33

    (93) expression -> ID = . LPAREN union_net_list RPAREN ON LSQBRACE union_element_list RSQBRACE SEMI

    LPAREN          shift and go to state 64


state 34

    (51) trans_list -> trans_in_net .

    SEMI            reduce using rule 51 (trans_list -> trans_in_net .)


state 35

    (54) trans_list_id -> ARRAY_ID .
    (55) trans_list_id -> ARRAY_ID . , trans_list
    (58) trans_list_ddot_id -> ARRAY_ID . DDOT ID
    (59) trans_list_ddot_id -> ARRAY_ID . DDOT ID , trans_list
    (62) trans_list_ddot_id -> ARRAY_ID . DDOT ARRAY_ID
    (63) trans_list_ddot_id -> ARRAY_ID . DDOT ARRAY_ID , trans_list
    (64) trans_in_net -> ARRAY_ID . LBRACE trans_list_in_net RBRACE , trans_list
    (67) trans_in_net -> ARRAY_ID . LBRACE trans_list_in_net RBRACE

    SEMI            reduce using rule 54 (trans_list_id -> ARRAY_ID .)
    ,               shift and go to state 66
    DDOT            shift and go to state 67
    LBRACE          shift and go to state 65


state 36

    (48) expression -> TRANSITION trans_list . SEMI

    SEMI            shift and go to state 68


state 37

    (50) trans_list -> trans_list_ddot_id .

    SEMI            reduce using rule 50 (trans_list -> trans_list_ddot_id .)


state 38

    (49) trans_list -> trans_list_id .

    SEMI            reduce using rule 49 (trans_list -> trans_list_id .)


state 39

    (52) trans_list_id -> ID .
    (53) trans_list_id -> ID . , trans_list
    (56) trans_list_ddot_id -> ID . DDOT ID
    (57) trans_list_ddot_id -> ID . DDOT ID , trans_list
    (60) trans_list_ddot_id -> ID . DDOT ARRAY_ID
    (61) trans_list_ddot_id -> ID . DDOT ARRAY_ID , trans_list
    (65) trans_in_net -> ID . LBRACE trans_list_in_net RBRACE , trans_list
    (66) trans_in_net -> ID . LBRACE trans_list_in_net RBRACE

    SEMI            reduce using rule 52 (trans_list_id -> ID .)
    ,               shift and go to state 70
    DDOT            shift and go to state 71
    LBRACE          shift and go to state 69


state 40

    (109) expression -> SHOW_TRANSITIONS SEMI .

    $end            reduce using rule 109 (expression -> SHOW_TRANSITIONS SEMI .)


state 41

    (107) expression -> SHOW_NETS SEMI .

    $end            reduce using rule 107 (expression -> SHOW_NETS SEMI .)


state 42

    (74) in_net_link_list -> ARRAY_ID .
    (75) in_net_link_list -> ARRAY_ID . LINK in_net_link_list
    (76) in_net_link_list -> ARRAY_ID . LINK LPAREN NUMBER RPAREN in_net_link_list
    (77) in_net_link_list -> ARRAY_ID . OR in_net_link_list

    RBRACE          reduce using rule 74 (in_net_link_list -> ARRAY_ID .)
    LINK            shift and go to state 72
    OR              shift and go to state 73


state 43

    (78) in_net_link_list -> ID . LINK in_net_link_list
    (79) in_net_link_list -> ID . LINK LPAREN NUMBER RPAREN in_net_link_list
    (80) in_net_link_list -> ID . OR in_net_link_list
    (81) in_net_link_list -> ID .

    LINK            shift and go to state 75
    OR              shift and go to state 74
    RBRACE          reduce using rule 81 (in_net_link_list -> ID .)


state 44

    (73) expression -> ARRAY_ID LBRACE in_net_link_list . RBRACE SEMI

    RBRACE          shift and go to state 76


state 45

    (84) expression -> ARRAY_ID DDOT ID . LPAREN element_list_id RPAREN SEMI
    (85) expression -> ARRAY_ID DDOT ID . LPAREN element_list_string RPAREN SEMI

    LPAREN          shift and go to state 77


state 46

    (94) expression -> ARRAY_ID = LPAREN . union_net_list RPAREN ON LSQBRACE union_element_list RSQBRACE SEMI
    (100) union_net_list -> . ID OR union_net_list
    (101) union_net_list -> . ARRAY_ID OR union_net_list
    (102) union_net_list -> . ID
    (103) union_net_list -> . ARRAY_ID

    ID              shift and go to state 80
    ARRAY_ID        shift and go to state 78

    union_net_list                 shift and go to state 79

state 47

    (4) net_list -> ARRAY_ID , . net_list
    (2) net_list -> . ID , net_list
    (3) net_list -> . ID
    (4) net_list -> . ARRAY_ID , net_list
    (5) net_list -> . ARRAY_ID

    ID              shift and go to state 20
    ARRAY_ID        shift and go to state 18

    net_list                       shift and go to state 81

state 48

    (1) expression -> PETRINET net_list SEMI .

    $end            reduce using rule 1 (expression -> PETRINET net_list SEMI .)


state 49

    (2) net_list -> ID , . net_list
    (2) net_list -> . ID , net_list
    (3) net_list -> . ID
    (4) net_list -> . ARRAY_ID , net_list
    (5) net_list -> . ARRAY_ID

    ID              shift and go to state 20
    ARRAY_ID        shift and go to state 18

    net_list                       shift and go to state 82

state 50

    (104) expression -> # ID = . ID

    ID              shift and go to state 83


state 51

    (38) place_in_net -> ARRAY_ID LBRACE . place_list_in_net RBRACE
    (39) place_in_net -> ARRAY_ID LBRACE . place_list_in_net RBRACE , place_list
    (40) place_list_in_net -> . ID , place_list_in_net
    (41) place_list_in_net -> . ARRAY_ID , place_list_in_net
    (42) place_list_in_net -> . ID LPAREN NUMBER RPAREN , place_list_in_net
    (43) place_list_in_net -> . ARRAY_ID LPAREN NUMBER RPAREN , place_list_in_net
    (44) place_list_in_net -> . ID
    (45) place_list_in_net -> . ID LPAREN NUMBER RPAREN
    (46) place_list_in_net -> . ARRAY_ID
    (47) place_list_in_net -> . ARRAY_ID LPAREN NUMBER RPAREN

    ID              shift and go to state 86
    ARRAY_ID        shift and go to state 84

    place_list_in_net              shift and go to state 85

state 52
